[gd_scene load_steps=12 format=2]

[ext_resource path="res://MainMenu/assets/main_menu/label_continue.png" type="Texture" id=1]
[ext_resource path="res://MainMenu/assets/main_menu/title.png" type="Texture" id=2]
[ext_resource path="res://MainMenu/assets/main_menu/version.png" type="Texture" id=3]
[ext_resource path="res://MainMenu/assets/main_menu/label_new_game.png" type="Texture" id=4]
[ext_resource path="res://MainMenu/assets/main_menu/label_options.png" type="Texture" id=5]
[ext_resource path="res://MainMenu/assets/main_menu/characters.png" type="Texture" id=6]
[ext_resource path="res://MainMenu/assets/main_menu/bg-color.png" type="Texture" id=7]
[ext_resource path="res://MainMenu/assets/main_menu/label_new_game--pressed.png" type="Texture" id=8]
[ext_resource path="res://MainMenu/assets/main_menu/label_options--pressed.png" type="Texture" id=9]
[ext_resource path="res://MainMenu/assets/main_menu/label_continue-pressed.png" type="Texture" id=10]
[ext_resource path="res://MainMenu/MainMenu.gd" type="Script" id=11]

[node name="MainMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 120
custom_constants/margin_top = 80
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}
game_tscn = "res://Game/Game.tscn"

[node name="bg-color" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.929412 )
position = Vector2( 682.805, 383.792 )
texture = ExtResource( 7 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1249.0
margin_bottom = 760.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 400.0
margin_bottom = 680.0

[node name="Logo" type="TextureRect" parent="HBoxContainer/VBoxContainer"]
margin_right = 400.0
margin_bottom = 52.0
texture = ExtResource( 2 )

[node name="MenuOptions" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 400.0
margin_bottom = 652.0
size_flags_vertical = 15
custom_constants/separation = 30
alignment = 1

[node name="Contunue" type="TextureButton" parent="HBoxContainer/VBoxContainer/MenuOptions"]
margin_top = 154.0
margin_right = 400.0
margin_bottom = 230.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 10 )

[node name="NewGame" type="TextureButton" parent="HBoxContainer/VBoxContainer/MenuOptions"]
margin_top = 260.0
margin_right = 400.0
margin_bottom = 336.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 8 )

[node name="Options" type="TextureButton" parent="HBoxContainer/VBoxContainer/MenuOptions"]
margin_top = 366.0
margin_right = 400.0
margin_bottom = 442.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 9 )

[node name="Version" type="TextureRect" parent="HBoxContainer/VBoxContainer"]
margin_top = 656.0
margin_right = 400.0
margin_bottom = 680.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer"]
margin_left = 404.0
margin_right = 1129.0
margin_bottom = 680.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="Characters" type="TextureRect" parent="HBoxContainer/CenterContainer"]
modulate = Color( 1, 1, 1, 0.337255 )
margin_right = 725.0
margin_bottom = 680.0
texture = ExtResource( 6 )

[connection signal="button_down" from="HBoxContainer/VBoxContainer/MenuOptions/Contunue" to="." method="_on_Contunue_button_down"]
[connection signal="button_up" from="HBoxContainer/VBoxContainer/MenuOptions/Contunue" to="." method="_on_Contunue_button_up"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/MenuOptions/Contunue" to="." method="_on_Contunue_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/MenuOptions/NewGame" to="." method="_on_NewGame_pressed"]
